Wrap and fixes

--- a/src/styles/_BoxSearch.scss
+++ b/src/styles/_BoxSearch.scss
@@ -1,5 +1,8 @@
 .vdb-search-box {
-  position: relative;
+  position: absolute;
+  bottom: 1em;
+  right: 0;
+  left: 0;
   input {
     width: 100%;
     height: 2.7em;
@@ -8,7 +11,7 @@
     padding: 0 0 0 2.7em;
     background: white;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
-    border-radius: 2px;
+    border-radius: .2em;
 
     line-height: 2.5em;
     font-size: .9em;
