--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,6 @@
 body {
   background: $bg;
+  height: 100%;
   &:before {
     content: "";
     background: $brand;
@@ -11,18 +12,34 @@ body {
   }
 }
 
+#the__root {
+  height: 100%;
+}
+
 .container {
   width: 100%;
+  height: 100%;
   max-width: 1240px;
+  padding: 0 .5rem;
   margin: 0 auto;
   position: relative;
 }
 
+@lost gutter .5rem;
+
 .vdb-side {
-  lost-column: 1/3;
-  float: left;
+  lost-column: 2/6;
 }
 
 .vdb-wrap {
-
+  lost-column: 4/6;
+  padding: 1em;
+  height: 100%;
+}
+.vdb-wrap-container {
+  width: 100%;
+  height: 100%;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
+  border-radius: .2rem;
 }
